--- a/Assignments/Team Leader-Adhikesav.M/Assignment3_Adhikesav.M.ipynb
+++ b/Assignments/Team Leader-Adhikesav.M/Assignment3_Adhikesav.M.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1.DOWNLOAD THE DATA SET AND UNZIP IT"
+        "# 1.THE DATA SET Prepration"
       ],
       "metadata": {
         "id": "aoiV1rH9mvBf"
@@ -4392,7 +4392,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2.IMAGE AUGMENTATION"
+        "# 2.Image Augmentation"
       ],
       "metadata": {
         "id": "RD5YlYQaRF77"
