--- a/Assignments/Team Leader-Adhikesav.M/Assignment3_Adhikesav.M.ipynb
+++ b/Assignments/Team Leader-Adhikesav.M/Assignment3_Adhikesav.M.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1.THE DATA SET Prepration"
+        "# 1.Data Set Prepration"
       ],
       "metadata": {
         "id": "aoiV1rH9mvBf"
